--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Akanksha Singh Portfolio </title>
     <link rel="icon" href="img/favicon-32x32.png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Akanksha Singh Portfolio" name="keywords">
+    <meta content="Akanksha Singh Portfolio" name="description">
     
 
     <!-- Favicon -->
