--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                         </div>
                     </div>
                     <h5 class="font-weight-medium mb-4">From crafting an enticing menu display to optimizing order management and payment processing, I'll provide a robust digital platform to keep coffee lovers coming back for more.</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2" href="https://akanksha352003.github.io/Antique-Cafe/">Visit Site</a>
+                    <a class="btn btn-sm btn-outline-primary py-2" href="https://akanksha-cafe.netlify.app/">Visit Site</a>
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
@@ -813,7 +813,7 @@
                         </div>
                     </div>
                     <h5 class="font-weight-medium mb-4">Through responsive design and compelling user interfaces, I deliver an immersive online experience, motivating visitors to engage and achieve their fitness goals.</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2" href="https://akanksha352003.github.io/FlexPro-Fitness/">Visit Site</a>
+                    <a class="btn btn-sm btn-outline-primary py-2" href="https://akanksha-gym.netlify.app/">Visit Site</a>
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
@@ -824,7 +824,7 @@
                         </div>
                     </div>
                     <h5 class="font-weight-medium mb-4">Crafting captivating user interfaces and intuitive designs, I bring my ecommerce website project to life, ensuring a seamless shopping experience for every customers.</h5>
-                    <a class="btn btn-sm btn-outline-primary py-2" href="https://akanksha352003.github.io/E-Commerce-Website1/">Visit Site</a>
+                    <a class="btn btn-sm btn-outline-primary py-2" href="https://akanksha-ecom.netlify.app/">Visit Site</a>
                 </div>
             </div>
         </div>
